style: fix alignment for suggested users

--- a/src/Components/Aside.module.css
+++ b/src/Components/Aside.module.css
@@ -22,8 +22,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1rem;
 }
 
+.user-profile-details {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
 .user-profile {
   text-decoration: none;
 }
@@ -37,11 +43,13 @@
   color: var(--grey-color-text);
 }
 
-.suggestions button {
-  margin: 0;
+.follow {
+  font-weight: 700;
+  color: var(--primary);
+  cursor: pointer;
 }
 
-.suggestions img {
+.profilePic {
   max-width: 2rem;
   border-radius: 50%;
 }
